--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "dot-env": "^0.0.1",
     "express": "^4.21.2",
     "mongoose": "^8.9.3",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
