--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.3",
     "dot-env": "^0.0.1",
     "express": "^4.21.2",
+    "cors":"^2.8.5",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9",
     "swagger-jsdoc": "^6.2.8",
